@@ -1,5 +1,5 @@
 # Version Identifier
-version = 1.0.11
+version = 1.0.12
 
 # Compile with debug information included
 build.debug = true
