@@ -11,6 +11,7 @@ Bug Fixes:
   - Fix HTTPCommand to avoid Expect_Continue header for POST and PUT requests (ORCJAVA-415)
   - Fixed invalid XML generated for sensor values (ORCJAVA-416)
   - Fixed Marantz protocol takes a long time to connect to receiver (ORCJAVA-418)
+  - Fix for timezone setting in date fields (ORCJAVA-401, Juha Lindfors)
 
 Controller Pro 1.0.11
 =====================
